--- a/cms/app/views/layouts/_footer.html.haml
+++ b/cms/app/views/layouts/_footer.html.haml
@@ -8,7 +8,7 @@
       %p
         %strong
           %tt
-            = "&copy; 2012 - #{Date.today.year} Marco Tralles | qb-it.de".html_safe
+            = "&copy; 2012 - #{Date.today.year} Marco Tralles".html_safe
       %p
         %small
           %tt
