--- a/cms/app/views/users/_form.html.haml
+++ b/cms/app/views/users/_form.html.haml
@@ -25,4 +25,4 @@
               = project.name.html_safe
 
       .form-actions
-        = f.submit 'Speichern', :class => 'btn btn-primary', :data => { :disable_with => 'Übertrage Daten ...' }
+        = f.submit 'Speichern', :class => 'btn btn-primary', :data => { :disable_with => 'Übertrage Daten …' }
