--- a/cms/app/views/users/_form.html.haml
+++ b/cms/app/views/users/_form.html.haml
@@ -1,6 +1,6 @@
 .box
   .box-title
-    User-Daten
+    Benutzerdaten
   .box-content.nopadding
     = simple_form_for(@user, html: {class: 'form-horizontal' }) do |f|
       -# = f.error_notification
