views/users/index: Use German *Aktion* over *Action*

--- a/cms/app/views/users/index.html.haml
+++ b/cms/app/views/users/index.html.haml
@@ -14,7 +14,7 @@
           %th
             Projektzuweisung
           %th{width: 100}
-            Action
+            Aktion
 
         - @users.each do |user|
           %tr
